[gd_scene load_steps=16 format=3 uid="uid://dh6one8nv3d0p"]

[ext_resource type="Script" path="res://scripts/puzzle_doors.gd" id="1_7mi5x"]
[ext_resource type="Texture2D" uid="uid://cfmcew3far82x" path="res://Assets/AGFG stone_arch.png" id="2_mdbxq"]
[ext_resource type="Texture2D" uid="uid://cvwtt0ll08qh0" path="res://Assets/AGFG door.png" id="3_ru0es"]
[ext_resource type="Texture2D" uid="uid://buabp5qknwje3" path="res://Assets/AGFG arch_only.png" id="4_iruiy"]
[ext_resource type="FontFile" uid="uid://t1erdgrt2tc" path="res://Assets/VT323-Regular.ttf" id="5_pbrhy"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_krvu0"]
size = Vector2(7.16666, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_cjj16"]
size = Vector2(12, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6irof"]
size = Vector2(8.66666, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_njl7p"]
size = Vector2(10.1719, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_wmxvh"]
size = Vector2(8.66666, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_rrwc8"]
size = Vector2(12, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4opm3"]
size = Vector2(11.3333, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qxxs3"]
size = Vector2(11.3333, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0vjh1"]
size = Vector2(11.3333, 22)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_xnmii"]
size = Vector2(35, 10)

[node name="puzzle_doors" type="RigidBody2D"]
position = Vector2(-70, 64)
gravity_scale = 0.0
script = ExtResource("1_7mi5x")
metadata/_edit_group_ = true

[node name="door_1_arch" type="Sprite2D" parent="."]
position = Vector2(14, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_mdbxq")

[node name="door_2_arch" type="Sprite2D" parent="."]
position = Vector2(110, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_mdbxq")

[node name="door_3_arch" type="Sprite2D" parent="."]
position = Vector2(62, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("2_mdbxq")

[node name="door_1_image" type="Sprite2D" parent="."]
position = Vector2(14, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ru0es")

[node name="door_2_image" type="Sprite2D" parent="."]
position = Vector2(62, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ru0es")

[node name="door_3_image" type="Sprite2D" parent="."]
position = Vector2(110, -84)
scale = Vector2(1.5, 1.5)
texture = ExtResource("3_ru0es")

[node name="door_1_cover" type="Sprite2D" parent="."]
position = Vector2(15, -80)
scale = Vector2(1.75, 1.5)
texture = ExtResource("4_iruiy")

[node name="door_2_cover" type="Sprite2D" parent="."]
position = Vector2(63, -80)
scale = Vector2(1.75, 1.5)
texture = ExtResource("4_iruiy")

[node name="door_3_cover" type="Sprite2D" parent="."]
position = Vector2(111, -80)
scale = Vector2(1.75, 1.5)
texture = ExtResource("4_iruiy")

[node name="wall" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(-5.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_krvu0")

[node name="wall2" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(29, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_cjj16")

[node name="wall3" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(92.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_6irof")

[node name="wall4" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(128, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_njl7p")

[node name="wall5" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(44.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_wmxvh")

[node name="wall6" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(77, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_rrwc8")

[node name="door_1_lock" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(11.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_4opm3")

[node name="door_2_lock" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(59.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_qxxs3")

[node name="door_3_lock" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(107.5, -84.5)
scale = Vector2(1.5, 1.5)
shape = SubResource("RectangleShape2D_0vjh1")

[node name="door_1_approach" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="approach_area" type="CollisionShape2D" parent="door_1_approach"]
position = Vector2(12.5, -63)
shape = SubResource("RectangleShape2D_xnmii")

[node name="door_2_approach" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="approach_area" type="CollisionShape2D" parent="door_2_approach"]
position = Vector2(60, -63)
shape = SubResource("RectangleShape2D_xnmii")

[node name="door_3_approach" type="Area2D" parent="."]
visible = false
monitoring = false

[node name="approach_area" type="CollisionShape2D" parent="door_3_approach"]
position = Vector2(108, -63)
shape = SubResource("RectangleShape2D_xnmii")

[node name="interact3" type="Label" parent="."]
visible = false
offset_left = 79.0
offset_top = -111.0
offset_right = 137.0
offset_bottom = -98.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Interact [E]"

[node name="interact2" type="Label" parent="."]
visible = false
offset_left = 31.0
offset_top = -111.0
offset_right = 89.0
offset_bottom = -98.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Interact [E]"

[node name="interact1" type="Label" parent="."]
visible = false
offset_left = -17.0
offset_top = -111.0
offset_right = 41.0
offset_bottom = -98.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Interact [E]"

[node name="clue_1" type="Label" parent="."]
visible = false
offset_left = -8.0
offset_top = -98.0
offset_right = 32.0
offset_bottom = -85.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Answer 1"

[node name="clue_2" type="Label" parent="."]
visible = false
offset_left = 41.0
offset_top = -98.0
offset_right = 81.0
offset_bottom = -85.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Answer 2"

[node name="clue_3" type="Label" parent="."]
visible = false
offset_left = 88.0
offset_top = -98.0
offset_right = 128.0
offset_bottom = -85.0
theme_override_fonts/font = ExtResource("5_pbrhy")
theme_override_font_sizes/font_size = 12
text = "Answer 3"

[connection signal="body_entered" from="door_1_approach" to="." method="_on_door_1_approach_body_entered"]
[connection signal="body_exited" from="door_1_approach" to="." method="_on_door_1_approach_body_exited"]
[connection signal="body_entered" from="door_2_approach" to="." method="_on_door_2_approach_body_entered"]
[connection signal="body_exited" from="door_2_approach" to="." method="_on_door_2_approach_body_exited"]
[connection signal="body_entered" from="door_3_approach" to="." method="_on_door_3_approach_body_entered"]
[connection signal="body_exited" from="door_3_approach" to="." method="_on_door_3_approach_body_exited"]
